RESOLVED FIXED66339
Apple's Windows production build should fail to compile if AVFoundation is not enabled
https://bugs.webkit.org/show_bug.cgi?id=66339
Summary Apple's Windows production build should fail to compile if AVFoundation is no...
Jeff Miller
Reported 2011-08-16 15:27:44 PDT
Apple's Windows production build should fail to compile if AVFoundation is not enabled
Attachments
Patch (1.78 KB, patch)
2011-08-16 15:31 PDT, Jeff Miller
darin: review+
Jeff Miller
Comment 1 2011-08-16 15:28:50 PDT
Jeff Miller
Comment 2 2011-08-16 15:31:20 PDT
Jeff Miller
Comment 3 2011-08-16 21:49:20 PDT
Note You need to log in before you can comment on or make changes to this bug.