Apple's Windows production build should fail to compile if AVFoundation is not enabled https://bugs.webkit.org/show_bug.cgi?id=66339

Generate a compile-time error for Production builds if !USE(AVFOUNDATION).

Reviewed by Darin Adler.

* platform/graphics/avfoundation/MediaPlayerPrivateAVFoundationCF.cpp: Generate a compile-time error for Production builds if !USE(AVFOUNDATION).


Canonical link: https://commits.webkit.org/82196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93194 268f45cc-cd09-0410-ab3c-d52691b4dbfc