Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundationCF.cpp
@@ -25,7 +25,9 @@
 
 #include "config.h"
 
-#if PLATFORM(WIN) && ENABLE(VIDEO) && USE(AVFOUNDATION)
+#if PLATFORM(WIN)&& ENABLE(VIDEO) 
+
+#if USE(AVFOUNDATION)
 
 #include "MediaPlayerPrivateAVFoundationCF.h"
 
@@ -1271,4 +1273,10 @@ void LayerClient::platformCALayerLayoutSublayersOfLayer(PlatformCALayer* wrapper
 
 } // namespace WebCore
 
-#endif // PLATFORM(WIN) && ENABLE(VIDEO) && USE(AVFOUNDATION)
+#else
+// AVFoundation should always be enabled for Apple production builds.
+#if __PRODUCTION__ && !USE(AVFOUNDATION)
+#error AVFoundation is not enabled!
+#endif // __PRODUCTION__ && !USE(AVFOUNDATION)
+#endif // USE(AVFOUNDATION)
+#endif // PLATFORM(WIN) && ENABLE(VIDEO)
